Make rebase_path() aware of Windows drive letter capitalization

Make sure rebase_path() supports both capital and non-capital Windows path
drive letters. It's unable to find common path prefix otherwise.

BUG=596072

Review URL: https://codereview.chromium.org/1817533002

Cr-Commit-Position: refs/heads/master@{#382532}

Former-commit-id: 01a402cd6fb6873e61d2faa269b6b991d307635e